[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yaloader"
version = "0.0.3"
description = "A package loading class configurations from yaml files"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.9"
authors = [
    { name = "Dominik Mairhöfer", email = "dominik@mairhoefer.xyz" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml",
]

[project.urls]
Homepage = "https://github.com/DominikMa/yaloader"
Documentation = "https://yaloader.readthedocs.io"
"Bug Tracker" = "https://github.com/DominikMa/yaloader/issues"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "autodoc-pydantic>=2.2.0",
    "coverage>=7.10.7",
    "furo>=2025.12.19",
    "jupyter-server>=2.17.0",
    "myst-nb>=1.3.0",
    "pytest>=8.4.2",
    "ruff>=0.15.5",
    "sphinx>=7.4.7",
    "sphinx-remove-toctrees>=1.0.0.post1",
]
